# ai-arcade

./: .gitignore  1 - PROJECT  OVERVIEW.md  2 - PROJECT PLAN.md  3 - IMPLEMENTATION_SUMMARY.md  4 - WINDOW_UPDATE_SUMMARY.md  CHANGELOG.md  README.md  TEST_RESULTS.md  WINDOW_UPDATE_SUMMARY.md  debug.txt  pyproject.toml
.claude/: settings.local.json
agent_arcade/: __init__.py  agent_launcher.py  agent_runner.py  ai_monitor.py  cli.py  config.py  game_library.py  game_runner.py  logger.py  tmux_manager.py  update_status.py
agent_arcade/agents/: __init__.py  aider.py  base.py  claude_code.py  codex.py  generic.py
agent_arcade/games/: __init__.py  base_game.py  game_2048.py  minesweeper.py  pong.py  snake.py  sudoku.py
agent_arcade/ui/: __init__.py  agent_selector.py  base_selector.py  game_selector.py  launcher_menu.py
ai_arcade/: ai_monitor.py  cli.py  config.py  game_library.py  game_runner.py  logger.py  tmux_manager.py
ai_arcade/agents/: __init__.py  codex.py
ai_arcade/games/: base_game.py  game_2048.py  snake.py
ai_arcade/ui/: game_selector.py  launcher_menu.py
scripts/: setup.sh
tests/: __init__.py
